css fix for 100vh issue on mobile

--- a/src/tailwind.css
+++ b/src/tailwind.css
@@ -5,9 +5,12 @@
 @layer base {
     html {
         font-family: Open Sans, system-ui, sans-serif;
+        height: -webkit-fill-available;
     }
     header {
         min-height: calc(var(--vh, 1vh) * 100);
+        min-height: -webkit-fill-available;
+
     }
     @font-face {
         font-family: 'Open Sans';
